# csv-reader

csv-reader/: Cargo.toml
csv-reader/src/: main.rs
csv-reader/src/utils/: calc.rs  csv_reader.rs  mod.rs
data/: fx_data.csv  fx_data2.csv  fx_data3.csv  fx_data4.csv
