[package]
name = "csv-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.22", features = ["serde"] }
csv = "1.1.6"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
